argo/argocd-server-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingress-route
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{subdomain:argo}.interpolar.ch`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
    - kind: Rule
      match: Host(`argo.interpolar.ch`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 443
          scheme: h2c
  tls:
    certResolver: default
    options: {}
